[metadata]
name = graph-based-clustering
version = 0.1.0
author = Dani El-Ayyass
author_email = dayyass@yandex.ru
description = Graph-Based Clustering using connected components and spanning trees
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dayyass/graph-based-clustering
project_urls =
    Bug Tracker = https://github.com/dayyass/graph-based-clustering/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy >= 1.21.2
    scikit-learn >= 0.24.2
    scipy >= 1.7.1
